--- a/css.css
+++ b/css.css
@@ -1,32 +1,50 @@
 * {margin: 0; padding: 0;}
 
 header {
-	height: 10vh;
+	height: 8vh;
 	background-color: #303536;
 }
 
 #headerContent {
 	text-align: center;
 	font-family: 'Hind', sans-serif;
-	font-size: 1em;
+	font-size: 1.2em;
 	color: white;
-	margin: auto;
+}
+
+
+#headerContent nav {
+	padding-top: 30px;
 }
 
 #headerContent a{
 	margin-top: 30px;
 	text-decoration: none;
 	color: white;
+	padding-right: 20px;
+	padding-left: 20px;
+	transition: color .5s ease;
 }
 
-.contentContainer {
+#headerContent a:hover {
+	color: gray;
+}
+
+
+/******CLASSES**********/
+.headerWrapper {
 	width: 60%;
 	margin: auto;
 }
 
+.contentWrapper {
+	width: 75%;
+	margin: auto;
+}
+
+/******MAIN SPLASH******/
 #mainSplash {
 	margin-top: 30px;
-	
 }
 
 #splashLogo{
@@ -44,3 +62,5 @@ header {
 	font-size: 2em;
 	font-family: 'Signika', sans-serif;
 }
+
+/********MAIN CONTENT*****/
