--- a/css.css
+++ b/css.css
@@ -1,35 +1,22 @@
 * {margin: 0; padding: 0;}
 
-header {
-	height: 8vh;
-	background-color: #303536;
-}
-
-#headerContent {
-	text-align: center;
+body {
 	font-family: 'Hind', sans-serif;
-	font-size: 1.2em;
-	color: white;
 }
 
-
-#headerContent nav {
-	padding-top: 30px;
+button{
+	background-color: #67D69A;
+	width: 125px;
+	height: 45px;
+	border:none;
+	border-radius: 15px;
+	-webkit-transition: 0.3s ease; 
+    transition: 0.3s ease;
 }
 
-#headerContent a{
-	margin-top: 30px;
-	text-decoration: none;
-	color: white;
-	padding-right: 20px;
-	padding-left: 20px;
-	transition: color .5s ease;
+button:hover{
+	background-color: #34AD6B
 }
-
-#headerContent a:hover {
-	color: gray;
-}
-
 
 /******CLASSES**********/
 .headerWrapper {
@@ -38,9 +25,39 @@ header {
 }
 
 .contentWrapper {
-	width: 75%;
+	width: 70%;
 	margin: auto;
 }
+
+/******HEADER*********/
+header {
+	height: 8vh;
+	background-color: #303536;
+}
+
+#headerContent {
+	text-align: center;
+	font-size: 1.2em;
+	color: white;
+}
+
+
+#headerContent nav {
+	padding-top: 3vh;
+}
+
+#headerContent a{
+	text-decoration: none;
+	color: white;
+	padding-right: 20px;
+	padding-left: 20px;
+	transition: color .3s ease;
+}
+
+#headerContent a:hover {
+	color: gray;
+}
+
 
 /******MAIN SPLASH******/
 #mainSplash {
@@ -64,3 +81,29 @@ header {
 }
 
 /********MAIN CONTENT*****/
+.pimg {
+	float: left;
+	margin-right: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: gray;
+}
+
+#projectsWrapper article{
+	width: 75%;
+	margin-bottom: 15px;
+	display: inline-block;
+}
+
+#projectsWrapper a{
+	text-decoration: none;
+	color: blue;
+}
+
+
+/******FOOTER*******/
+footer {
+	text-align: center;
+	padding-top: 15px;
+	padding-bottom: 25px;
+}
