--- a/css/homecss.css
+++ b/css/homecss.css
@@ -4,17 +4,13 @@
 body {
 	font-family: 'Hind', sans-serif;
 	color: #717B7F;
-}
-
-h1 {
-
+	font-size: 14pt;
 }
 
 a {
 	text-decoration: none;
 	color: #717B7F;
 	font-size: 20pt;
-	padding-right: 20px;
 	-webkit-transition: 0.3s ease; 
     transition: 0.3s ease;
 }
@@ -33,13 +29,14 @@ a:hover {
 #intro a{
 	font-size: 15pt;
 	text-align: center;
+	padding:10px;
 }
 
 
-/******PROJECTS******/
+/******PROJECT LINKS******/
 #work {
-	margin-top: 20px;
-	margin-bottom: 20px;
+	width: 75%;
+	margin:auto;
 }
 
 .leftCol {
@@ -52,15 +49,100 @@ a:hover {
 	width: 50%;
 }
 
-.projectEntry {
-	position: relative;
+.projectlink {
+	/*width: 100%;*/
+	margin: auto;
+	margin-bottom: 30px;
+	text-align: center;
 }
+	
+	#pcpart {
+		border: solid 1px gray;
+	}
 
-	.projectEntryLeft span{
-		float: left;
-		position: absolute;
-		-webkit-transition: 0.5s ease; 
-	    transition: 0.5s ease;
+	/****IMAGE OVERLAY EFFECTS****/
+	.slidecontainer {
+	  position: relative;
+	  height: 100%;
+	  margin: auto;
+	}
+
+	.slideimage {
+	  display: block;
+	  width: 70%;
+	  height: auto;
+	  margin: auto;
+	}
+
+	.overlay {
+	  position: absolute;
+	  bottom: 0;
+	  left: 0;
+	  right: 0;
+	  opacity: 0;
+	  background-color: gray;
+	  overflow: hidden;
+	  width: 70%;
+	  height: 0;
+	  margin: auto;
+	  transition: .5s ease;
+	}
+
+	.slidecontainer:hover .overlay {
+	  height: 30%;
+	  opacity: 1;
+	}
+
+	.text {
+	  white-space: nowrap; 
+	  color: white;
+	  font-size: 20px;
+	  position: absolute;
+	  overflow: hidden;
+	  top: 50%;
+	  left: 50%;
+	  transform: translate(-50%, -50%);
+	  -ms-transform: translate(-50%, -50%);
+	}
+
+
+
+
+/****Project Pages****/
+	.projectpage {
+		margin: auto;
+	}
+
+	.projectinfo{
+		margin: auto;
+		width: 75%;
+		max-width: 700px;
+	}
+
+	.projectinfo ul {
+		list-style-type: none;
+	}
+
+	.projectinfo ul li {
+		margin: 10px;
+	}
+
+	.wideimg{
+		display: block;
+		width: 65%;
+		margin: auto;
+		margin-bottom: 30px;
+	}
+
+	.imgcontainer{
+		background-color: green;
+	}
+
+	.btn{
+		padding: 4px 10px 4px 10px;
+		border-radius: 10px;
+		background: 
+		border: 2px solid blue;
 	}
 
 		#nmtptitle {
@@ -69,42 +151,17 @@ a:hover {
 			bottom: 100px;
 		}
 
-	.projectEntryRight span{
-		float: right;
-		position: absolute;
-		-webkit-transition: 0.5s ease; 
-	    transition: 0.5s ease;
-	}
-
 		#snowtitle {
 			right: 70px;
 			font-size: 55pt;
 			bottom: 120px;
 		}
 
-	.projectEntryLeft img{
-		display: block;
-		margin-left:45%;
-		-webkit-transition: 0.5s ease; 
-	    transition: 0.5s ease;
-	}
-
-	.projectEntryRight img{
-		display: block;
-		margin-left:15%;
-		-webkit-transition: 0.5s ease; 
-	    transition: 0.5s ease;
-	}
-
-	.projectEntry img:hover{
-		transform: scale(1.05);
-	}
-
-	#pcpart {
-		border: solid 1px gray;
-	}
+/****ABOUT PAGE****/
 
 
+
+/****FOOTER****/
 footer {
 	margin: auto;
     left: 0;
@@ -122,36 +179,11 @@ footer a:hover {
 	margin-right: 40px;
 }
 
-/****Project Pages****/
-.projectpage {
-	width:50%;
-	margin: auto;
-}
-
-ul {
-	list-style-type: none;
-	font-weight: bold;
-}
-
-ul li {
-	display:inline;
-	margin: 10px;
-	margin-left: 0;
-}
-
-.projectpage p {
-	margin: 20px;
-	margin-left: 0;
-	width: 75%;
-}
-
 /******RESIZING FOR 1366******/
-/*@media screen and (max-width: 1900px) {
-	.projectEntry img{
-		width: 80%;
-		height: auto;
-		min-width: 384px;
-		min-height: 75.6px;
+@media screen and (max-width: 1000px) {
+	.wideimg{
+
+		width: 100%;
 	}
 }
 
