--- a/css/homecss.css
+++ b/css/homecss.css
@@ -1,3 +1,10 @@
+:root{
+    --orange:#EB721C;
+    --lblue:#33D6E5;
+    --blue:#00464C;
+}
+
+
 /****BODY****/
 * {margin: 0; padding: 0;}
 
@@ -9,20 +16,24 @@ body {
 
 a {
 	text-decoration: none;
-	color: #717B7F;
+	color: gray;
 	font-size: 20pt;
-	-webkit-transition: 0.3s ease; 
-    transition: 0.3s ease;
+	-webkit-transition: 0.5s ease; 
+    transition: 0.5s ease;
 }
 
 a:hover {
-	color: #93DEFF;
+	color: var(--lblue);
+}
+
+#active{
+	color: var(--orange);
 }
 
 /******TOP CONTENT******/
 #intro {
 	margin-top: 50px;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 	text-align: center;
 }
 
@@ -57,19 +68,20 @@ a:hover {
 }
 	
 	#pcpart {
-		border: solid 1px gray;
+		border-bottom: solid 1px gray;
 	}
 
 	/****IMAGE OVERLAY EFFECTS****/
 	.slidecontainer {
 	  position: relative;
 	  height: 100%;
+	  width: 70%;
 	  margin: auto;
 	}
 
 	.slideimage {
 	  display: block;
-	  width: 70%;
+	  width: 100%;
 	  height: auto;
 	  margin: auto;
 	}
@@ -80,9 +92,9 @@ a:hover {
 	  left: 0;
 	  right: 0;
 	  opacity: 0;
-	  background-color: gray;
+	  background-color: var(--blue);
 	  overflow: hidden;
-	  width: 70%;
+	  width: 100%;
 	  height: 0;
 	  margin: auto;
 	  transition: .5s ease;
@@ -127,15 +139,26 @@ a:hover {
 		margin: 10px;
 	}
 
+	.projectinfo h1, h3{
+		color: var(--orange);
+	}
+
 	.wideimg{
 		display: block;
 		width: 65%;
+		margin: auto;  
+		margin-bottom: 30px;
+	}
+
+	.tallImg{
+		display: block;
+		width: 25%;
 		margin: auto;
 		margin-bottom: 30px;
 	}
 
 	.imgcontainer{
-		background-color: green;
+		background-color: var(--blue);
 	}
 
 	.btn{
@@ -158,7 +181,11 @@ a:hover {
 		}
 
 /****ABOUT PAGE****/
-
+#aboutwrapper {
+	width: 60%;
+	margin: auto;
+	text-align: center;
+}
 
 
 /****FOOTER****/
@@ -173,29 +200,25 @@ footer {
 }
 
 footer a:hover {
-	color: #93DEFF;
+	color: var(--lblue);
 }
 .spanentry {
 	margin-right: 40px;
 }
 
-/******RESIZING FOR 1366******/
-@media screen and (max-width: 1000px) {
-	.wideimg{
+/******RESIZING FOR 1200******/
+@media screen and (max-width: 1200px) {
+	.leftCol {
+		float: none;
+		width: 80%;
+		margin: auto;
+	}
 
-		width: 100%;
+	.rightCol {
+		float: none;
+		width: 80%;
+		margin: auto;
 	}
 }
-
-/******RESIZING FOR 1366******/
-/*@media screen and (max-width: 600px) {
-	.projectEntryRight img{
-
-	}
-
-	.projectEntryLeft img{
-
-	}
-}*/
 
 
